--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
     "outDir": "dist",
+//    "rootDir": "./src",
+    "baseUrl": "src",
     "sourceMap": true,
-    "module": "es2020",
-    "target": "ES2017",
+    "module": "commonjs",
+    "target": "es5",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
-    "strict": true
+    "strict": true,
+    "esModuleInterop": true
   }
 }
