--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "include": ["./src/**/*"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/__tests__/*"],
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "outDir": "dist",
+    "outDir": "./lib",
 //    "rootDir": "./src",
     "baseUrl": "src",
     "sourceMap": true,
     "module": "commonjs",
     "target": "es5",
+    "declaration": true,
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
