--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "palidate.js",
   "version": "0.0.3",
   "description": "Persian validations and util functions",
-  "main": "index.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": ["lib/**/*"],
   "scripts": {
     "start": "tsc && node dist/index.js",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ashkanahrabi/palidate.js.git"
   },
   "author": "Ashkan Ahrabi",
+  "keywords": ["Validation", "Persian", "Persian Validation", "Farsi Validation"],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashkanahrabi/palidate.js/issues"
