handle test coverage with codecov and add a badge for it

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 lib/
 node_modules/
 .idea/
+coverage/
 # Env files      # A good safeguard against accidentally publishing
+.env
 .env.
 .env.test
 # Logs
