--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm test && ./codecov -t $(grep CODECOV_TOKEN .env | cut -d '=' -f2) && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
@@ -36,12 +36,13 @@
   },
   "homepage": "https://github.com/ashkanahrabi/palidation.js#readme",
   "devDependencies": {
-    "typescript": "^4.5.3",
     "@types/jest": "^27.0.3",
+    "codecov": "^3.8.3",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.5.3"
   }
 }
