add collect coverage path

--- a/jestconfig.json
+++ b/jestconfig.json
@@ -4,5 +4,6 @@
   },
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
-  "collectCoverage": true
+  "collectCoverage": true,
+  "collectCoverageFrom": ["./src/**"]
 }
