no source map is needed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "allowJs": true,
     "checkJs": true,
     "outDir": "./lib",
-//    "rootDir": "./src",
     "baseUrl": "src",
-    "sourceMap": true,
+    "sourceMap": false,
     "module": "commonjs",
     "target": "es5",
     "declaration": true,
