--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "posttest": "./codecov -t $(grep CODECOV_TOKEN .env | cut -d '=' -f2)",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
+    "prepare": "npm run build && typedoc",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
@@ -44,6 +44,7 @@
     "ts-jest": "^27.1.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.22.10",
     "typescript": "^4.5.3"
   }
 }
